force-app/main/default/objects/Village_Presence__c/fields/Projected_Income__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income__c</fullName>
    <formula>Projected_Income_Local__c *  FX_Rate__c</formula>
    <label>Income (Group)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>