force-app/main/default/objects/Village_Presence__c/fields/Projected_Income_Yield__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Yield__c</fullName>
    <formula>Projected_Income__c  /  Unit_Size__c</formula>
    <label>Income Yield (Group)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>