force-app/main/default/objects/Village_Presence__c/fields/Projected_Income_Yield_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Yield_Local__c</fullName>
    <formula>Projected_Income_Local__c  /  Unit_Size__c</formula>
    <label>Income Yield (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>