force-app/main/default/objects/Village_Presence__c/fields/Projected_Return_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Return_Local__c</fullName>
    <label>Return (Local)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>