force-app/main/default/objects/Village_Presence__c/fields/Projected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales__c</fullName>
    <formula>Projected_Sales_Local__c *  FX_Rate__c</formula>
    <label>Sales (Group)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>