force-app/main/default/objects/Village_Presence__c/fields/Projected_Sales_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_Local__c</fullName>
    <formula>Projected_Sales_Yield_Local_Converted__c *  Unit_Size__c</formula>
    <label>Sales (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>