force-app/main/default/objects/Village_Presence__c/fields/Projected_Sales_Yield_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_Yield_Local__c</fullName>
    <label>Sales Yield (Local)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>