force-app/main/default/objects/Village_Presence__c/fields/Projected_Sales_Yield_Local_Converted__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_Yield_Local_Converted__c</fullName>
    <formula>IF( TEXT(Village__r.Village_Size_Metric__c) = &apos;sq.ft&apos;, Projected_Sales_Yield_Local__c / 0.09290304, Projected_Sales_Yield_Local__c )</formula>
    <label>Projected Sales Yield (Local) Converted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>