force-app/main/default/objects/Village_Presence__c/fields/Projected_Yield__c.field-meta.xml
<CustomField>
    <fullName>Projected_Yield__c</fullName>
    <formula>Projected_Sales__c  /  Unit_Size__c</formula>
    <label>Sales Yield (Group)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>