force-app/main/default/objects/Village_Presence__c/fields/Remote_Selling_TBVSC_to_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Remote_Selling_TBVSC_to_Consumer__c</fullName>
    <inlineHelpText>Select if the Brand in village will be engaging with remote selling from TBVSC to consumer</inlineHelpText>
    <label>Remote Selling - TBVSC to Consumer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not for Now</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Agreed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>