force-app/main/default/objects/Village_Presence__c/fields/Replenish__c.field-meta.xml
<CustomField>
    <fullName>Replenish__c</fullName>
    <formula>HFS_Bags_Left__c &lt;=  HFS_Threshold__c</formula>
    <label>Replenish?</label>
    <type>Checkbox</type>
</CustomField>