force-app/main/default/objects/Village_Presence__c/fields/Retail_Director__c.field-meta.xml
<CustomField>
    <fullName>Retail_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Director</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>notContain</operation>
            <value>Community</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Village_Presences2</relationshipName>
    <type>Lookup</type>
</CustomField>