force-app/main/default/objects/Village_Presence__c/fields/Retail_Manager__c.field-meta.xml
<CustomField>
    <fullName>Retail_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Village_Presences</relationshipName>
    <type>Lookup</type>
</CustomField>