force-app/main/default/objects/Village_Presence__c/fields/Retail_Manager_Formula__c.field-meta.xml
<CustomField>
    <fullName>Retail_Manager_Formula__c</fullName>
    <formula>Retail_Manager__r.FirstName &amp; &quot; &quot; &amp;  Retail_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retail Manager</label>
    <type>Text</type>
</CustomField>