force-app/main/default/objects/Village_Presence__c/fields/Sales_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rating__c</fullName>
    <label>Sales Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>