force-app/main/default/objects/Village_Presence__c/fields/SCS_Space__c.field-meta.xml
<CustomField>
    <fullName>SCS_Space__c</fullName>
    <inlineHelpText>Enter the space % of the selling area occupied by Special Curated Selection</inlineHelpText>
    <label>SCS Space %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>