force-app/main/default/objects/Village_Presence__c/fields/Send_Daily_Sale_Email_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Send_Daily_Sale_Email_Reminders__c</fullName>
    <formula>IF(ISPICKVAL(Village__r.Daily_Sale_Email_Reminders__c, &apos;No&apos;), false, 
IF (NOT(ISBLANK( TEXT(Daily_Sale_Email_Reminders__c))), IF (ISPICKVAL(Daily_Sale_Email_Reminders__c ,&apos;Yes&apos;), true, false),true 
))</formula>
    <inlineHelpText>Calculated override value determining whether this Village presence should automatically receive a Daily Sale email reminder based on Village and Village presence entries.</inlineHelpText>
    <label>Send Daily Sale Email Reminders</label>
    <type>Checkbox</type>
</CustomField>