force-app/main/default/objects/Village_Presence__c/fields/Special_Curated_Selection_Active__c.field-meta.xml
<CustomField>
    <fullName>Special_Curated_Selection_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this check box is selected the Daily Sales record will include SCS Sales and Unit data fields.  This is product recently discontinued at full price but not yet available at off-price. Product for TBVSC at a 10% discount off RRP.</inlineHelpText>
    <label>Special Curated Selection Active</label>
    <type>Checkbox</type>
</CustomField>