force-app/main/default/objects/Village_Presence__c/fields/Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Standard_Terms__c</fullName>
    <description>Lease terms reach standard terms after a period time (matures), or on a threshold.</description>
    <inlineHelpText>Lease terms reach standard terms after a period time (matures), or on a threshold.</inlineHelpText>
    <label>Standard Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Matures</fullName>
            </value>
            <value>
                <fullName>Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>