force-app/main/default/objects/Village_Presence__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Pending</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>in Refit</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>