force-app/main/default/objects/Village_Presence__c/fields/Store_email__c.field-meta.xml
<CustomField>
    <fullName>Store_email__c</fullName>
    <label>Store email</label>
    <type>Email</type>
</CustomField>