force-app/main/default/objects/Village_Presence__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>