force-app/main/default/objects/Village_Presence__c/fields/Strategy_Detail__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Detail__c</fullName>
    <label>Strategy Detail</label>
    <type>TextArea</type>
</CustomField>