force-app/main/default/objects/Village_Presence__c/fields/System_Trip__c.field-meta.xml
<CustomField>
    <fullName>System_Trip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Trip</label>
    <type>Checkbox</type>
</CustomField>