force-app/main/default/objects/Village_Presence__c/fields/TOR_Schedule_Description__c.field-meta.xml
<CustomField>
    <fullName>TOR_Schedule_Description__c</fullName>
    <label>TOR Schedule</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>