force-app/main/default/objects/Village_Presence__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <formula>Income_Rating__c + Position_Rating__c + Sales_Rating__c</formula>
    <label>Total Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>