force-app/main/default/objects/Village_Presence__c/fields/Tourism_Rating__c.field-meta.xml
<CustomField>
    <fullName>Tourism_Rating__c</fullName>
    <label>Tourism Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>