force-app/main/default/objects/Village_Presence__c/fields/Turnover_Rent__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Rent__c</fullName>
    <description>Turnover Rent Schedule for year 1 to 10 or to standard.</description>
    <inlineHelpText>Turnover Rent Schedule for year 1 to 10 or to standard.</inlineHelpText>
    <label>TOR Schedule</label>
    <type>TextArea</type>
</CustomField>