force-app/main/default/objects/Village_Presence__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Village Presences</relationshipLabel>
    <relationshipName>Village_Presences</relationshipName>
    <type>Lookup</type>
</CustomField>