force-app/main/default/objects/Village_Presence__c/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <formula>Unit__r.Size_GEA__c</formula>
    <label>Unit Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>