force-app/main/default/objects/Village_Presence__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Village Presences</relationshipLabel>
    <relationshipName>Village_Presences</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>