force-app/main/default/objects/Village_Presence__c/fields/Watch_List_Reason__c.field-meta.xml
<CustomField>
    <fullName>Watch_List_Reason__c</fullName>
    <formula>Brand__r.Watch_List_Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Watch List Reason</label>
    <type>Text</type>
</CustomField>