force-app/main/default/objects/Village_Presence__c/fields/Watch_Listed__c.field-meta.xml
<CustomField>
    <fullName>Watch_Listed__c</fullName>
    <formula>Brand__r.Watch_Listed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Watch Listed?</label>
    <type>Checkbox</type>
</CustomField>