force-app/main/default/objects/Village_Presence__c/fields/Website_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Website_Marketing__c</fullName>
    <inlineHelpText>Specify if the Brand in the village has given pre-approval for advertising their brand on the Website</inlineHelpText>
    <label>Website Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
                <default>true</default>
                <label>Not Specified</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>