force-app/main/default/objects/Village_Presence__c/validationRules/Certification_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Certification_Active</fullName>
    <active>true</active>
    <description>The certification is only active if the certification type have any value.</description>
    <errorConditionFormula>IF(AND(ISBLANK(TEXT(CertSales_CertPeriod_Type__c)),CertSales_Active__c == true), true, false)</errorConditionFormula>
    <errorDisplayField>CertSales_CertPeriod_Type__c</errorDisplayField>
    <errorMessage>You set certification sales as true, you need to set the certification type.</errorMessage>
</ValidationRule>