force-app/main/default/objects/Village_Presence__c/validationRules/Coniq_New_Review_Date_NOT_More_90_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Coniq_New_Review_Date_NOT_More_90_days</fullName>
    <active>true</active>
    <errorConditionFormula>Coniq_Next_Review_Date__c &gt;  (Coniq_Last_Review_Date__c + 90)</errorConditionFormula>
    <errorDisplayField>Coniq_Next_Review_Date__c</errorDisplayField>
    <errorMessage>The &quot;Next Review Date&quot; cannot be more than 90 after the &quot;Last Review Date&quot;</errorMessage>
</ValidationRule>