force-app/main/default/objects/Village_Presence__c/validationRules/Name_and_Brand_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_and_Brand_Not_Editable</fullName>
    <active>true</active>
    <description>Brand lookup field is not possible to change after set upped of the Village Presence.</description>
    <errorConditionFormula>ISCHANGED(Brand__c)&amp;&amp; $Profile.Name == &apos;Finance Sales Certification&apos;</errorConditionFormula>
    <errorMessage>Brand isn&apos;t editable</errorMessage>
</ValidationRule>