force-app/main/default/objects/Village_Presence__c/validationRules/the_maximum_percent_SCS_CSB_greater_10.validationRule-meta.xml
<ValidationRule>
    <fullName>the_maximum_percent_SCS_CSB_greater_10</fullName>
    <active>true</active>
    <description>the maximum % that can be entered for both of the fields is 100%</description>
    <errorConditionFormula>OR(CSB_Space__c &gt; 100,  SCS_Space__c &gt;100)</errorConditionFormula>
    <errorMessage>You cannot record a % space greater than 100%.  Please enter a lower number and select save.</errorMessage>
</ValidationRule>