force-app/main/default/objects/Village_Presence__c/listViews/Bicester_Brands.listView-meta.xml
<ListView>
    <fullName>Bicester_Brands</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Status__c</columns>
    <columns>Retail_Manager__c</columns>
    <columns>Unit__c</columns>
    <columns>Retail_Manager_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>Bicester Brands</label>
    <language>en_US</language>
</ListView>