force-app/main/default/objects/Village_Presence__c/listViews/Daily_Sales_Active.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_Active</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Village__c</columns>
    <columns>Unit__c</columns>
    <columns>Daily_Sale_Record_Type_Override__c</columns>
    <columns>Daily_Sales_Active__c</columns>
    <columns>Daily_Sale_Active_Date__c</columns>
    <columns>Retail_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>BP_HFS_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Daily_Sales_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Daily Sales Active</label>
    <language>en_US</language>
    <sharedTo>
        <group>Admins_group</group>
        <group>Location_La_Roca</group>
    </sharedTo>
</ListView>