force-app/main/default/objects/Village_Presence__c/listViews/Daily_Sales_Email_Reminders.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_Email_Reminders</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Daily_Sale_Email_Reminders__c</columns>
    <columns>Send_Daily_Sale_Email_Reminders__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Daily_Sales_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Daily Sales Email Reminders</label>
    <language>en_US</language>
</ListView>