force-app/main/default/objects/Village_Presence__c/listViews/Fidenza_Brands.listView-meta.xml
<ListView>
    <fullName>Fidenza_Brands</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Daily_Sales_Active__c</columns>
    <columns>Retail_Manager__c</columns>
    <columns>CertSales_Active__c</columns>
    <columns>CertSales_CertPeriod_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Fidenza</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Trading</value>
    </filters>
    <label>Fidenza Brands</label>
    <language>en_US</language>
</ListView>