force-app/main/default/objects/Village_Presence__c/listViews/FV_Brand_Ratings_Exit.listView-meta.xml
<ListView>
    <fullName>FV_Brand_Ratings_Exit</fullName>
    <columns>NAME</columns>
    <columns>Total_Rating__c</columns>
    <columns>Position_Rating__c</columns>
    <columns>Sales_Rating__c</columns>
    <columns>Income_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>fidenza</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Trading</value>
    </filters>
    <label>FV Brand Rating</label>
</ListView>