force-app/main/default/objects/Village_Presence__c/listViews/HFS_Bag_Stuff.listView-meta.xml
<ListView>
    <fullName>HFS_Bag_Stuff</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Status__c</columns>
    <columns>Is_HFS_Active__c</columns>
    <columns>BP_HFS_Active__c</columns>
    <columns>HFS_Bags_Left__c</columns>
    <columns>HFS_Bags_Received__c</columns>
    <columns>HFS_Bags_Used__c</columns>
    <columns>HFS_Threshold__c</columns>
    <columns>Replenish__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Trading</value>
    </filters>
    <label>HFS Bag Stuff</label>
    <language>en_US</language>
    <sharedTo>
        <group>Co_ordinator</group>
        <group>HFS_Owners_Bicester</group>
        <group>VR_Assistant</group>
    </sharedTo>
</ListView>