force-app/main/default/objects/Village_Presence__c/listViews/Ingolstadt_Village.listView-meta.xml
<ListView>
    <fullName>Ingolstadt_Village</fullName>
    <columns>NAME</columns>
    <columns>Retail_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Store_email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Ingolstadt</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Trading</value>
    </filters>
    <label>Ingolstadt Village</label>
    <language>en_US</language>
</ListView>