force-app/main/default/objects/Village_Presence__c/listViews/La_Vallee_Brands.listView-meta.xml
<ListView>
    <fullName>La_Vallee_Brands</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Daily_Sales_Active__c</columns>
    <columns>Village__c</columns>
    <columns>CertSales_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>La Vallée</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Trading</value>
    </filters>
    <label>La Vallée Brands</label>
    <language>en_US</language>
</ListView>